deploy: 8822c75710616ac3a67a7b1743dfcb87ba65bc24

--- a/exercice-6-les-données-majic.html
+++ b/exercice-6-les-données-majic.html
@@ -23,7 +23,7 @@
 <meta name="author" content="Maël Theulière &amp; Bruno Terseur" />
 
 
-<meta name="date" content="2023-03-19" />
+<meta name="date" content="2023-03-23" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -52,7 +52,7 @@
 <link href="libs/anchor-sections-1.1.0/anchor-sections.css" rel="stylesheet" />
 <link href="libs/anchor-sections-1.1.0/anchor-sections-hash.css" rel="stylesheet" />
 <script src="libs/anchor-sections-1.1.0/anchor-sections.js"></script>
-<script src="libs/htmlwidgets-1.6.1/htmlwidgets.js"></script>
+<script src="libs/htmlwidgets-1.6.2/htmlwidgets.js"></script>
 <link href="libs/datatables-css-0.0.0/datatables-crosstalk.css" rel="stylesheet" />
 <script src="libs/datatables-binding-0.27/datatables.js"></script>
 <link href="libs/dt-core-1.12.1/css/jquery.dataTables.min.css" rel="stylesheet" />
@@ -302,8 +302,65 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <li>6 si la population recule et l’indicateur d’étalement urbain est négatif.</li>
 </ul></li>
 </ul>
-<p>Résultat attendu :</p>
-<p><img src="Preparer-ses-donnees-avec-R-et-le-Tidyverse_files/figure-html/mod2_exo6_solution-1.png" width="576" /><img src="Preparer-ses-donnees-avec-R-et-le-Tidyverse_files/figure-html/mod2_exo6_solution-2.png" width="576" /></p>
+<p>Résultats attendus :</p>
+<p>Résultat attendu : création de l’indicateur <code>artificialisation</code> pour les deux millésimes de majic (solution COGiter)</p>
+<pre><code>## Rows: 1,307
+## Columns: 4
+## $ TypeZone   &lt;fct&gt; Communes, Communes, Communes, Communes, Communes, Communes,…
+## $ Zone       &lt;fct&gt; &quot;Abbaretz&quot;, &quot;Aigrefeuille-sur-Maine&quot;, &quot;Ancenis-Saint-Géréon…
+## $ CodeZone   &lt;fct&gt; 44001, 44002, 44003, 44005, 44006, 44007, 44009, 44010, 440…
+## $ artif_2009 &lt;dbl&gt; 3064748, 2408844, 6859785, 6101987, 2379588, 3042688, 50259…</code></pre>
+<pre><code>## Rows: 1,307
+## Columns: 4
+## $ TypeZone   &lt;fct&gt; Communes, Communes, Communes, Communes, Communes, Communes,…
+## $ Zone       &lt;fct&gt; &quot;Abbaretz&quot;, &quot;Aigrefeuille-sur-Maine&quot;, &quot;Ancenis-Saint-Géréon…
+## $ CodeZone   &lt;fct&gt; 44001, 44002, 44003, 44005, 44006, 44007, 44009, 44010, 440…
+## $ artif_2014 &lt;dbl&gt; 3160057, 2485622, 7103107, 6496868, 2419875, 3105298, 52452…</code></pre>
+<p>Résultat attendu : création de les indicateurs <code>pop_2009</code> et <code>pop_2014</code> pour les deux millésimes de majic (solution COGiter)</p>
+<p>Résultat attendu : jointude implicite sur <code>idcom</code> et création de l’<code>indicateur d'étalement urbain</code>(solution COGiter) :</p>
+<pre><code>## Rows: 1,307
+## Columns: 11
+## $ TypeZone                    &lt;fct&gt; Communes, Communes, Communes, Communes, Co…
+## $ Zone                        &lt;fct&gt; &quot;Abbaretz&quot;, &quot;Aigrefeuille-sur-Maine&quot;, &quot;Anc…
+## $ CodeZone                    &lt;fct&gt; 44001, 44002, 44003, 44005, 44006, 44007, …
+## $ artif_2009                  &lt;dbl&gt; 3064748, 2408844, 6859785, 6101987, 237958…
+## $ artif_2014                  &lt;dbl&gt; 3160057, 2485622, 7103107, 6496868, 241987…
+## $ pop_2009                    &lt;dbl&gt; 1909, 3214, 10639, 5894, 1810, 2465, 8265,…
+## $ pop_2014                    &lt;dbl&gt; 2042, 3714, 10783, 6680, 1830, 2601, 8747,…
+## $ evoarti                     &lt;dbl&gt; 3.109847857, 3.187337993, 3.547079099, 6.4…
+## $ evopop                      &lt;dbl&gt; 6.966998, 15.556938, 1.353511, 13.335596, …
+## $ ies                         &lt;dbl&gt; 0.446368388, 0.204882086, 2.620651010, 0.4…
+## $ indicateur_etalement_avance &lt;chr&gt; &quot;2a&quot;, &quot;2a&quot;, &quot;3&quot;, &quot;2a&quot;, &quot;3&quot;, &quot;2a&quot;, &quot;2a&quot;, &quot;6…</code></pre>
+<p>Résultat attendu pour <code>etalement_urbain_commune</code>:</p>
+<pre><code>## Rows: 1,235
+## Columns: 11
+## $ TypeZone                    &lt;fct&gt; Communes, Communes, Communes, Communes, Co…
+## $ Zone                        &lt;fct&gt; &quot;Abbaretz&quot;, &quot;Aigrefeuille-sur-Maine&quot;, &quot;Anc…
+## $ CodeZone                    &lt;fct&gt; 44001, 44002, 44003, 44005, 44006, 44007, …
+## $ artif_2009                  &lt;dbl&gt; 3064748, 2408844, 6859785, 6101987, 237958…
+## $ artif_2014                  &lt;dbl&gt; 3160057, 2485622, 7103107, 6496868, 241987…
+## $ pop_2009                    &lt;dbl&gt; 1909, 3214, 10639, 5894, 1810, 2465, 8265,…
+## $ pop_2014                    &lt;dbl&gt; 2042, 3714, 10783, 6680, 1830, 2601, 8747,…
+## $ evoarti                     &lt;dbl&gt; 3.109847857, 3.187337993, 3.547079099, 6.4…
+## $ evopop                      &lt;dbl&gt; 6.966998, 15.556938, 1.353511, 13.335596, …
+## $ ies                         &lt;dbl&gt; 0.446368388, 0.204882086, 2.620651010, 0.4…
+## $ indicateur_etalement_avance &lt;chr&gt; &quot;2a&quot;, &quot;2a&quot;, &quot;3&quot;, &quot;2a&quot;, &quot;3&quot;, &quot;2a&quot;, &quot;2a&quot;, &quot;6…</code></pre>
+<p>Résultat attendu pour <code>etalement_urbain_epci</code>:</p>
+<pre><code>## Rows: 71
+## Columns: 11
+## $ TypeZone                    &lt;fct&gt; Epci, Epci, Epci, Epci, Epci, Epci, Epci, …
+## $ Zone                        &lt;fct&gt; &quot;CC du Pays de Pontchâteau St-Gildas-des-B…
+## $ CodeZone                    &lt;fct&gt; 200000438, 200023778, 200033298, 200040475…
+## $ artif_2009                  &lt;dbl&gt; 27594293, 44299964, 25161639, 24880690, 16…
+## $ artif_2014                  &lt;dbl&gt; 28629232, 46277932, 26955382, 25836264, 18…
+## $ pop_2009                    &lt;dbl&gt; 31965, 45278, 27906, 18370, 17608, 29131, …
+## $ pop_2014                    &lt;dbl&gt; 35112, 48610, 28168, 19004, 17017, 29304, …
+## $ evoarti                     &lt;dbl&gt; 3.750555, 4.464943, 7.128880, 3.840625, 7.…
+## $ evopop                      &lt;dbl&gt; 9.8451431, 7.3589823, 0.9388662, 3.4512793…
+## $ ies                         &lt;dbl&gt; 0.3809548, 0.6067337, 7.5930733, 1.1128120…
+## $ indicateur_etalement_avance &lt;chr&gt; &quot;2a&quot;, &quot;2a&quot;, &quot;5&quot;, &quot;3&quot;, &quot;6&quot;, &quot;3&quot;, &quot;5&quot;, &quot;2a&quot;,…</code></pre>
+<p>Résultat attendu pour le graphique (vu au M5) :</p>
+<p><img src="Preparer-ses-donnees-avec-R-et-le-Tidyverse_files/figure-html/unnamed-chunk-53-1.png" width="576" /><img src="Preparer-ses-donnees-avec-R-et-le-Tidyverse_files/figure-html/unnamed-chunk-53-2.png" width="576" /></p>
 
 </div>
             </section>
