--- a/exercice-6-les-données-majic.html
+++ b/exercice-6-les-données-majic.html
@@ -317,6 +317,18 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 ## $ CodeZone   &lt;fct&gt; 44001, 44002, 44003, 44005, 44006, 44007, 44009, 44010, 440…
 ## $ artif_2014 &lt;dbl&gt; 3160057, 2485622, 7103107, 6496868, 2419875, 3105298, 52452…</code></pre>
 <p>Résultat attendu : création de les indicateurs <code>pop_2009</code> et <code>pop_2014</code> pour les deux millésimes de majic (solution COGiter)</p>
+<pre><code>## Rows: 1,307
+## Columns: 4
+## $ TypeZone &lt;fct&gt; Communes, Communes, Communes, Communes, Communes, Communes, C…
+## $ Zone     &lt;fct&gt; &quot;Abbaretz&quot;, &quot;Aigrefeuille-sur-Maine&quot;, &quot;Ancenis-Saint-Géréon&quot;,…
+## $ CodeZone &lt;fct&gt; 44001, 44002, 44003, 44005, 44006, 44007, 44009, 44010, 44012…
+## $ pop_2009 &lt;dbl&gt; 1909, 3214, 10639, 5894, 1810, 2465, 8265, 3185, 2595, 2591, …</code></pre>
+<pre><code>## Rows: 1,307
+## Columns: 4
+## $ TypeZone &lt;fct&gt; Communes, Communes, Communes, Communes, Communes, Communes, C…
+## $ Zone     &lt;fct&gt; &quot;Abbaretz&quot;, &quot;Aigrefeuille-sur-Maine&quot;, &quot;Ancenis-Saint-Géréon&quot;,…
+## $ CodeZone &lt;fct&gt; 44001, 44002, 44003, 44005, 44006, 44007, 44009, 44010, 44012…
+## $ pop_2014 &lt;dbl&gt; 2042, 3714, 10783, 6680, 1830, 2601, 8747, 3086, 2769, 2927, …</code></pre>
 <p>Résultat attendu : jointude implicite sur <code>idcom</code> et création de l’<code>indicateur d'étalement urbain</code>(solution COGiter) :</p>
 <pre><code>## Rows: 1,307
 ## Columns: 11
