deploy: 2a5dbcac9ea532af47e53b25ac7f3e5a5f7d3f59

--- a/exercice-6-les-données-majic.html
+++ b/exercice-6-les-données-majic.html
@@ -23,7 +23,7 @@
 <meta name="author" content="Maël Theulière &amp; Bruno Terseur" />
 
 
-<meta name="date" content="2023-03-23" />
+<meta name="date" content="2023-03-29" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -237,7 +237,16 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 </ul></li>
 <li class="chapter" data-level="6" data-path="manipuler-plusieurs-tables.html"><a href="manipuler-plusieurs-tables.html"><i class="fa fa-check"></i><b>6</b> Manipuler plusieurs tables</a>
 <ul>
-<li class="chapter" data-level="6.1" data-path="manipuler-plusieurs-tables.html"><a href="manipuler-plusieurs-tables.html#exercice-5"><i class="fa fa-check"></i><b>6.1</b> Exercice 5</a></li>
+<li class="chapter" data-level="6.1" data-path="manipuler-plusieurs-tables.html"><a href="manipuler-plusieurs-tables.html#concepts-généraux"><i class="fa fa-check"></i><b>6.1</b> Concepts généraux</a></li>
+<li class="chapter" data-level="6.2" data-path="manipuler-plusieurs-tables.html"><a href="manipuler-plusieurs-tables.html#principaux-exemples-de-jointure"><i class="fa fa-check"></i><b>6.2</b> Principaux exemples de jointure</a></li>
+<li class="chapter" data-level="6.3" data-path="manipuler-plusieurs-tables.html"><a href="manipuler-plusieurs-tables.html#paramétrage-du-suffixe-pour-des-colonnes-présentes-dans-les-deux-tables"><i class="fa fa-check"></i><b>6.3</b> Paramétrage du suffixe pour des colonnes présentes dans les deux tables</a></li>
+<li class="chapter" data-level="6.4" data-path="manipuler-plusieurs-tables.html"><a href="manipuler-plusieurs-tables.html#animations-de-garrick-abenduie"><i class="fa fa-check"></i><b>6.4</b> Animations de Garrick Abenduie</a>
+<ul>
+<li class="chapter" data-level="6.4.1" data-path="manipuler-plusieurs-tables.html"><a href="manipuler-plusieurs-tables.html#inner-join"><i class="fa fa-check"></i><b>6.4.1</b> Inner join</a></li>
+<li class="chapter" data-level="6.4.2" data-path="manipuler-plusieurs-tables.html"><a href="manipuler-plusieurs-tables.html#left-join"><i class="fa fa-check"></i><b>6.4.2</b> Left join</a></li>
+<li class="chapter" data-level="6.4.3" data-path="manipuler-plusieurs-tables.html"><a href="manipuler-plusieurs-tables.html#pivot-longuer-pivot-wider"><i class="fa fa-check"></i><b>6.4.3</b> Pivot longuer / Pivot wider</a></li>
+</ul></li>
+<li class="chapter" data-level="6.5" data-path="manipuler-plusieurs-tables.html"><a href="manipuler-plusieurs-tables.html#exercice-5"><i class="fa fa-check"></i><b>6.5</b> Exercice 5</a></li>
 </ul></li>
 <li class="chapter" data-level="7" data-path="structurer-ses-tables.html"><a href="structurer-ses-tables.html"><i class="fa fa-check"></i><b>7</b> Structurer ses tables</a>
 <ul>
@@ -372,7 +381,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 ## $ ies                         &lt;dbl&gt; 0.3809548, 0.6067337, 7.5930733, 1.1128120…
 ## $ indicateur_etalement_avance &lt;chr&gt; &quot;2a&quot;, &quot;2a&quot;, &quot;5&quot;, &quot;3&quot;, &quot;6&quot;, &quot;3&quot;, &quot;5&quot;, &quot;2a&quot;,…</code></pre>
 <p>Résultat attendu pour le graphique (vu au M5) :</p>
-<p><img src="Preparer-ses-donnees-avec-R-et-le-Tidyverse_files/figure-html/unnamed-chunk-53-1.png" width="576" /><img src="Preparer-ses-donnees-avec-R-et-le-Tidyverse_files/figure-html/unnamed-chunk-53-2.png" width="576" /></p>
+<p><img src="Preparer-ses-donnees-avec-R-et-le-Tidyverse_files/figure-html/unnamed-chunk-55-1.png" width="576" /><img src="Preparer-ses-donnees-avec-R-et-le-Tidyverse_files/figure-html/unnamed-chunk-55-2.png" width="576" /></p>
 
 </div>
             </section>
