--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <meta name="author" content="Maël Theulière &amp; Bruno Terseur" />
 
 
-<meta name="date" content="2023-03-23" />
+<meta name="date" content="2023-03-29" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -237,7 +237,16 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 </ul></li>
 <li class="chapter" data-level="6" data-path="manipuler-plusieurs-tables.html"><a href="manipuler-plusieurs-tables.html"><i class="fa fa-check"></i><b>6</b> Manipuler plusieurs tables</a>
 <ul>
-<li class="chapter" data-level="6.1" data-path="manipuler-plusieurs-tables.html"><a href="manipuler-plusieurs-tables.html#exercice-5"><i class="fa fa-check"></i><b>6.1</b> Exercice 5</a></li>
+<li class="chapter" data-level="6.1" data-path="manipuler-plusieurs-tables.html"><a href="manipuler-plusieurs-tables.html#concepts-généraux"><i class="fa fa-check"></i><b>6.1</b> Concepts généraux</a></li>
+<li class="chapter" data-level="6.2" data-path="manipuler-plusieurs-tables.html"><a href="manipuler-plusieurs-tables.html#principaux-exemples-de-jointure"><i class="fa fa-check"></i><b>6.2</b> Principaux exemples de jointure</a></li>
+<li class="chapter" data-level="6.3" data-path="manipuler-plusieurs-tables.html"><a href="manipuler-plusieurs-tables.html#paramétrage-du-suffixe-pour-des-colonnes-présentes-dans-les-deux-tables"><i class="fa fa-check"></i><b>6.3</b> Paramétrage du suffixe pour des colonnes présentes dans les deux tables</a></li>
+<li class="chapter" data-level="6.4" data-path="manipuler-plusieurs-tables.html"><a href="manipuler-plusieurs-tables.html#animations-de-garrick-abenduie"><i class="fa fa-check"></i><b>6.4</b> Animations de Garrick Abenduie</a>
+<ul>
+<li class="chapter" data-level="6.4.1" data-path="manipuler-plusieurs-tables.html"><a href="manipuler-plusieurs-tables.html#inner-join"><i class="fa fa-check"></i><b>6.4.1</b> Inner join</a></li>
+<li class="chapter" data-level="6.4.2" data-path="manipuler-plusieurs-tables.html"><a href="manipuler-plusieurs-tables.html#left-join"><i class="fa fa-check"></i><b>6.4.2</b> Left join</a></li>
+<li class="chapter" data-level="6.4.3" data-path="manipuler-plusieurs-tables.html"><a href="manipuler-plusieurs-tables.html#pivot-longuer-pivot-wider"><i class="fa fa-check"></i><b>6.4.3</b> Pivot longuer / Pivot wider</a></li>
+</ul></li>
+<li class="chapter" data-level="6.5" data-path="manipuler-plusieurs-tables.html"><a href="manipuler-plusieurs-tables.html#exercice-5"><i class="fa fa-check"></i><b>6.5</b> Exercice 5</a></li>
 </ul></li>
 <li class="chapter" data-level="7" data-path="structurer-ses-tables.html"><a href="structurer-ses-tables.html"><i class="fa fa-check"></i><b>7</b> Structurer ses tables</a>
 <ul>
@@ -277,7 +286,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <div id="header">
 <h1 class="title">Préparer ses données avec R et le Tidyverse</h1>
 <p class="author"><em>Maël Theulière &amp; Bruno Terseur</em></p>
-<p class="date"><em>23 March 2023</em></p>
+<p class="date"><em>29 March 2023</em></p>
 </div>
 <div id="introduction" class="section level1 hasAnchor" number="1">
 <h1><span class="header-section-number">Chapitre 1</span> Introduction<a href="index.html#introduction" class="anchor-section" aria-label="Anchor link to header"></a></h1>
