deploy: 93abbe76a33c02e937f374a5dbf355ad3d604a43

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <meta name="author" content="Maël Theulière &amp; Bruno Terseur" />
 
 
-<meta name="date" content="2023-09-12" />
+<meta name="date" content="2023-09-15" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -164,7 +164,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 </ul></li>
 <li class="chapter" data-level="3" data-path="bien-commencer.html"><a href="bien-commencer.html"><i class="fa fa-check"></i><b>3</b> Bien commencer</a>
 <ul>
-<li class="chapter" data-level="3.1" data-path="bien-commencer.html"><a href="bien-commencer.html#créer-un-projet-sous-rstudio-pour-vous-permettre-de-recencer-vos-travaux."><i class="fa fa-check"></i><b>3.1</b> Créer un projet sous Rstudio pour vous permettre de recencer vos travaux.</a></li>
+<li class="chapter" data-level="3.1" data-path="bien-commencer.html"><a href="bien-commencer.html#créer-un-projet-sous-rstudio-pour-vous-permettre-de-recenser-vos-travaux."><i class="fa fa-check"></i><b>3.1</b> Créer un projet sous Rstudio pour vous permettre de recenser vos travaux.</a></li>
 <li class="chapter" data-level="3.2" data-path="bien-commencer.html"><a href="bien-commencer.html#intégrer-vos-données"><i class="fa fa-check"></i><b>3.2</b> Intégrer vos données</a></li>
 <li class="chapter" data-level="3.3" data-path="bien-commencer.html"><a href="bien-commencer.html#créer-votre-arborescence-de-projet"><i class="fa fa-check"></i><b>3.3</b> Créer votre arborescence de projet</a></li>
 <li class="chapter" data-level="3.4" data-path="bien-commencer.html"><a href="bien-commencer.html#utilisation-du-package-savoirfr"><i class="fa fa-check"></i><b>3.4</b> Utilisation du package savoirfR</a></li>
@@ -181,7 +181,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <li class="chapter" data-level="4.2" data-path="lire-des-données.html"><a href="lire-des-données.html#lire-des-données-disponibles-sur-le-web-téléchargement-de-fichiers"><i class="fa fa-check"></i><b>4.2</b> Lire des données disponibles sur le web : téléchargement de fichiers</a>
 <ul>
 <li class="chapter" data-level="4.2.1" data-path="lire-des-données.html"><a href="lire-des-données.html#exemple-site-de-linsee-avec-dezippage"><i class="fa fa-check"></i><b>4.2.1</b> Exemple site de l’INSEE, avec dezippage</a></li>
-<li class="chapter" data-level="4.2.2" data-path="lire-des-données.html"><a href="lire-des-données.html#exemple-données-sur-les-logements-vacants-depuis-data.gouv.fr"><i class="fa fa-check"></i><b>4.2.2</b> Exemple données sur les logements vacants depuis data.gouv.fr</a></li>
+<li class="chapter" data-level="4.2.2" data-path="lire-des-données.html"><a href="lire-des-données.html#exemple-données-sur-les-logements-vacants-depuis-data.gouv.fr-fichier-locvac-produit-par-le-cerema"><i class="fa fa-check"></i><b>4.2.2</b> Exemple données sur les logements vacants depuis data.gouv.fr (fichier locvac produit par le CEREMA)</a></li>
 </ul></li>
 <li class="chapter" data-level="4.3" data-path="lire-des-données.html"><a href="lire-des-données.html#lire-des-données-disponibles-sur-le-web-via-api"><i class="fa fa-check"></i><b>4.3</b> Lire des données disponibles sur le web via API</a>
 <ul>
@@ -194,6 +194,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <li class="chapter" data-level="4.5.1" data-path="lire-des-données.html"><a href="lire-des-données.html#lire-des-données-sous-postgresql-première-approche"><i class="fa fa-check"></i><b>4.5.1</b> Lire des données sous PostgreSQL : première approche</a></li>
 <li class="chapter" data-level="4.5.2" data-path="lire-des-données.html"><a href="lire-des-données.html#lire-des-données-sous-postgresql-seconde-approche"><i class="fa fa-check"></i><b>4.5.2</b> Lire des données sous PostgreSQL : seconde approche</a></li>
 </ul></li>
+<li class="chapter" data-level="4.6" data-path="lire-des-données.html"><a href="lire-des-données.html#lire-des-fichiers-au-format-parquet"><i class="fa fa-check"></i><b>4.6</b> Lire des fichiers au format parquet</a></li>
 </ul></li>
 <li class="chapter" data-level="5" data-path="manipuler-des-données.html"><a href="manipuler-des-données.html"><i class="fa fa-check"></i><b>5</b> Manipuler des données</a>
 <ul>
@@ -286,7 +287,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <div id="header">
 <h1 class="title">Préparer ses données avec R et le Tidyverse</h1>
 <p class="author"><em>Maël Theulière &amp; Bruno Terseur</em></p>
-<p class="date"><em>12 September 2023</em></p>
+<p class="date"><em>15 September 2023</em></p>
 </div>
 <div id="introduction" class="section level1 hasAnchor" number="1">
 <h1><span class="header-section-number">Chapitre 1</span> Introduction<a href="index.html#introduction" class="anchor-section" aria-label="Anchor link to header"></a></h1>
